XF2.2 template macro call syntax

--- a/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warning_category_delete.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warning_category_delete.html
@@ -1,3 +1,3 @@
 <xf:title>{{ phrase('sv_confirm_deletion_of_warning_category') }}</xf:title>
 
-<xf:macro template="sv_warning_improvements_category_tree_macros" name="category_delete_form" arg-category="{$category}" />
+<xf:macro name="sv_warning_improvements_category_tree_macros::category_delete_form" arg-category="{$category}" />
