--- a/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warning_edit_inputs.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warning_edit_inputs.html
@@ -5,4 +5,4 @@
 	</xf:foreach>
 </xf:selectrow>
 
-<xf:macro template="display_order_macros" name="row" arg-name="sv_display_order" arg-value="{$warning.sv_display_order}" />
+<xf:macro name="display_order_macros::row" arg-name="sv_display_order" arg-value="{$warning.sv_display_order}" />
