--- a/upload/src/addons/SV/WarningImprovements/_output/templates/public/svWarningInfo_warning_info_delete.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/public/svWarningInfo_warning_info_delete.html
@@ -16,8 +16,7 @@
 			</xf:inforow>
 		</div>
 
-		<xf:macro template="svWarningImprov_macros"
-				  name="sendAlert"
+		<xf:macro name="svWarningImprov_macros::sendAlert"
 				  arg-label="{{ phrase('svWarningImprov_send_alert_on_deleting_warning') }}"
 				  arg-withReason="{{ true }}"
 				  />
