--- a/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warning_action_list.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warning_action_list.html
@@ -1,1 +1,1 @@
-<xf:macro template="sv_warning_improvements_action_tree_macros" name="action_list" arg-globalActions="{$globalActions}" arg-actions="{$actions}" arg-categoryTree="{$categoryTree}" />
+<xf:macro name="sv_warning_improvements_action_tree_macros::action_list" arg-globalActions="{$globalActions}" arg-actions="{$actions}" arg-categoryTree="{$categoryTree}" />
