--- a/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warning_sort.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warning_sort.html
@@ -1,5 +1,5 @@
 <xf:title>{{ phrase('sv_warning_improvements_sort_warning_definitions') }}</xf:title>
 
-<xf:macro template="sv_warning_improvements_warning_tree_macros" name="sortable_form"
+<xf:macro name="sv_warning_improvements_warning_tree_macros::sortable_form"
 	arg-categoryTree="{$categoryTree}"
 	arg-warnings="{$warnings}" />
