--- a/upload/src/addons/SV/WarningImprovements/_output/templates/public/svWarningInfo_warning_info.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/public/svWarningInfo_warning_info.html
@@ -76,7 +76,7 @@
                     <xf:option value="not_required" label="{{ phrase('sv_warningAcknowledge_not_required') }}" />
                 </xf:radio>
             <xf:else />
-                <xf:macro template="svWarningAcknowledgement_macros" name="acknowledge_state" arg-warning="{{ $warning }}" />
+                <xf:macro name="svWarningAcknowledgement_macros::acknowledge_state" arg-warning="{{ $warning }}" />
             </xf:if>
         </xf:formrow>
 
@@ -158,16 +158,14 @@
 				<span class="block-formSectionHeader-aligner">{{ phrase('report') }}</span>
 			</h2>
 			<xf:contentcheck>
-				<xf:macro template="svReportImprov_report_macros"
-						  name="resolve_report" 
+				<xf:macro name="svReportImprov_report_macros::resolve_report"
 						  arg-report="{$warning.Report}"
 						  />
 			</xf:contentcheck>
 		</xf:if>
 	</xf:if>
 
-	<xf:macro template="svWarningImprov_macros"
-			  name="sendAlert"
+	<xf:macro name="svWarningImprov_macros::sendAlert"
 			  arg-label="{{ phrase('svWarningImprov_send_alert_on_editing_warning') }}"
 			  arg-withReason="{{ true }}"
 			  />
