--- a/upload/src/addons/SV/WarningImprovements/_output/templates/public/svWarningImprov_macros.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/public/svWarningImprov_macros.html
@@ -96,7 +96,7 @@
 				<span class="block-formSectionHeader-aligner">{{ phrase('sv_warning_improvements_previous_warnings', {'count': $user.warning_count}) }}</span>
 			</span>
 		</h2>
-		<xf:set var="$withWarningAck" value="{{ s_addon_active('SV/WarningAcknowledgement') }}"/>
+		<xf:set var="$withWarningAck" value="{{ is_addon_active('SV/WarningAcknowledgement') }}"/>
 
 		<div class="block-body previous-warnings block-body--collapsible">
 			<xf:formrow>
